<resources>
    <string name="app_name">FishFinder</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="app_logo">App Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me?</string>
    <string name="app_logo_image">App Logo image</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
</resources>